--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,19 @@
 *.iml
 .gradle
 /local.properties
+/local2.properties
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/.idea/gradle.xml
 .DS_Store
 /build
 /captures
 .externalNativeBuild
 .cxx
 local.properties
+local2.properties
+.idea/gradle.xml
