--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.dagger.hilt.android'
+    id 'kotlin-kapt'
 }
-
 android {
     namespace 'com.khodkari.movietoemoji'
     compileSdk 33
@@ -18,6 +19,15 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+        def apiKeyFile = new File(rootProject.property("api_key_file"))
+        def apiKeyProperties = new Properties()
+        apiKeyProperties.load(new FileInputStream(apiKeyFile))
+        buildConfigField(
+                "String",
+                "API_KEY",
+                "\"" + apiKeyProperties.getProperty("API_KEY") + "\""
+        )
+
     }
 
     buildTypes {
@@ -43,6 +53,7 @@ android {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
+//        exclude 'local2.properties'
     }
 }
 
@@ -55,9 +66,27 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.3.1'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+
+    // Hilt dependencies
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+
+    // Ktor dependencies
+    implementation "io.ktor:ktor-client-okhttp:$ktor_version"
+
+    // Coroutines dependencies
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+
+    // openAI kotlin dependencies
+    implementation "com.aallam.openai:openai-client:$kotlin_client_version"
+}
+// Allow references to generated code
+kapt {
+    correctErrorTypes true
 }
